feat: implement pure client-side invoice service with optional PDF generation
- Remove all AWS credential dependencies from frontend
- Add pure-client-service.ts for localStorage-first approach
- Background PDF generation via Lambda (no blocking)
- Automatic S3 PDF discovery for existing files
- 7-day PDF access without AWS credentials
- Graceful fallback when Lambda/S3 unavailable
- Update invoice-service.ts to use new architecture
- Add Lambda functions for S3-only operations
- Update environment configuration examples

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,16 @@
-# AWS Configuration
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your_access_key_here
-AWS_SECRET_ACCESS_KEY=your_secret_key_here
-AWS_SESSION_TOKEN=your_session_token_here
+# Pure Client-Side Configuration - No AWS Credentials Needed
 
-# DynamoDB Configuration
-DYNAMODB_TABLE_NAME=invoices
+# Your existing Lambda function URL (for PDF generation)
+VITE_LAMBDA_URL=https://your-lambda-function-url-here
 
-# S3 Configuration (for Lambda function)
-S3_BUCKET_NAME=your-bucket-name
+# Your S3 bucket public URL (for PDF access)
+VITE_S3_PUBLIC_URL=https://your-bucket-name.s3.amazonaws.com
+
+# AWS Amplify (for user authentication only)
+VITE_AWS_REGION=us-east-1
+VITE_AWS_USER_POOL_ID=us-east-1_xxxxxxxxx
+VITE_AWS_USER_POOL_WEB_CLIENT_ID=xxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# Example URLs (replace with your actual URLs):
+# VITE_LAMBDA_URL=https://abc123def456.lambda-url.us-east-1.on.aws/
+# VITE_S3_PUBLIC_URL=https://my-invoice-bucket.s3.amazonaws.com
